--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   {{title}}
 </h1>
 
-<ul *ngFor="let item of items | async">
-  <li>{{item.name}}</li>
+<ul *ngFor="let business of businesses">
+  <li>{{business.company}}</li>
 </ul>
